<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>nz.co.fortytwo.signalk.server</groupId>
  <artifactId>signalk-server</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>signalk-server</name>
  <properties>
		<!-- <bundle.name>nsb-${project.version}</bundle.name> -->
		<signalk.core.version>0.0.1-SNAPSHOT</signalk.core.version>
		<jetty.version>8.1.15.v20140411</jetty.version>
		<camel.version>2.14.1</camel.version>
		<camel.core.version>2.14.1</camel.core.version>
		<jna.version>3.6.0-SNAPSHOT</jna.version>
	</properties>
  <licenses>
		<license>
			<name>GNU GENERAL PUBLIC LICENSE, Version 3</name>
			<url>http://www.gnu.org/licenses/gpl.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>Tasman Consulting Ltd</name>
		<url>www.42.co.nz</url>
	</organization>
	<developers>
		<developer>
			<id>rob42</id>
			<name>Robert Huitema</name>
			<email>robert@42.co.nz</email>
		</developer>
	</developers>
	<repositories>
		<repository>
			<id>java.net jni</id>
			<name>java.nt JNI Snapshot Repository</name>
			<url>https://maven.java.net/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>PJC</id>
			<name>Sparetime Repository</name>
			<url>http://www.sparetimelabs.com/maven2</url>
		</repository>
		<repository>
			<id>dma AIS</id>
			<name>DMA AisLib Repository</name>
			<url>http://repository-dma.forge.cloudbees.com/release</url>
		</repository>
		<repository>
		   <id>maven-restlet</id>
		   <name>Public online Restlet repository</name>
		   <url>http://maven.restlet.com</url>
		</repository> 
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>autoincrement-versions-maven-plugin</id>
			<name>autoincrement-versions-maven-plugin</name>
			<url>http://autoincrement-versions-maven-plugin.googlecode.com/svn/repo</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>

	</pluginRepositories>
	
  <dependencies>
  
  		<dependency>
			<groupId>nz.co.fortytwo.signalk.core</groupId>
			<artifactId>signalk-core</artifactId>
			<version>${signalk.core.version}</version>
		</dependency>
  			<!-- serial comms -->

		<!-- jna LGPL, Apache-->
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>${jna.version}</version>
		</dependency>
		<!-- BSD -->
		<dependency>
			<groupId>com.sparetimelabs</groupId>
			<artifactId>purejavacomm</artifactId>
			<version>0.0.21</version>
		</dependency>

		<!-- Camel Apache2 licence-->
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-core</artifactId>
			<version>${camel.core.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-websocket</artifactId>
			<version>${camel.core.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-cometd</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-xstream</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-stream</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-exec</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.camel</groupId>
		    <artifactId>camel-restlet</artifactId>
		    <version>${camel.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.camel</groupId>
		    <artifactId>camel-jetty</artifactId>
		    <version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-test</artifactId>
			<version>${camel.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.apache.camel</groupId>
		    <artifactId>camel-netty4</artifactId>
		    <version>${camel.version}</version>
		    <!-- use the same version as your Camel core version -->
		</dependency>
		<!--  <dependency>
		    <groupId>org.apache.camel</groupId>
		    <artifactId>camel-quartz2</artifactId>
		    <version>${camel.version}</version>
		</dependency> -->
		
		<!-- jetty Apache/Eclipse licence-->
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-webapp</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-io</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-servlet</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-util</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jsp-2.1-glassfish</artifactId>
			<version>2.1.v20100127</version>
		</dependency>
	  	<!-- ais -->
	  	
	  	<!-- ais  Apache licence-->
		<!-- <module>ais-lib-messages</module> -->
		<!-- <module>ais-lib-utils</module> -->
		<!-- <module>ais-lib-cli</module> -->
		<dependency>
			<groupId>dk.dma.ais.lib</groupId>
			<artifactId>ais-lib-communication</artifactId>
			<version>2.1</version>
		</dependency>
	  	<!-- json -  Apache licence
	  	<dependency>
	  		<groupId>org.sharegov</groupId>
	  		<artifactId>mjson</artifactId>
	  		<version>1.3</version>
	  	</dependency>-->
	  	
	  	<!-- commons and misc = apache licence -->
  		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.1</version>
		</dependency>
				<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.6</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<!-- time - apache licence-->
		<dependency>
		    <groupId>joda-time</groupId>
		    <artifactId>joda-time</artifactId>
		    <version>2.4</version>
		</dependency>
		<!-- nmea LGPL 3-->
		<dependency>
			<groupId>net.sf.marineapi</groupId>
			<artifactId>marineapi</artifactId>
			<version>0.7.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cobertura-maven-plugin</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- commons -->
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-exec</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>	
		<!-- xml BSD-->
		<dependency>
			<groupId>dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>1.6.1</version>
		</dependency>	
		<!-- test http and ws - Apache lic-->
		<dependency>
		    <groupId>com.jayway.jsonpath</groupId>
		    <artifactId>json-path</artifactId>
		    <version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.ning</groupId>
			<artifactId>async-http-client</artifactId>
			<version>1.8.14</version>
		</dependency>
  </dependencies>
  <build>
  	<plugins>
		  	<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			   
			    <configuration>
			        <forkCount>1</forkCount>
			        <reuseForks>false</reuseForks>
			        <argLine>-Xmx512m -XX:MaxPermSize=32m</argLine>
			    </configuration>
		    </plugin>

			<!-- Allows the example to be run via 'mvn compile exec:java' -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<configuration>
					<mainClass>nz.co.fortytwo.signalk.server.ServerMain</mainClass>
					<includePluginDependencies>false</includePluginDependencies>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2.1</version>
				<!-- Tell Maven when to execute this plugin -->
				<executions>
					<execution>
						<id>make-assembly-jar</id>
						<phase>package</phase>
						<configuration>
							<descriptorRefs>
								<!-- Tell Maven-Assembly to include dependencies in jar -->
								<descriptorId>jar-with-dependencies</descriptorId>
							</descriptorRefs>
							<archive>
								<manifest>
									<!-- Specify class to be run at startup -->
									<mainClass>nz.co.fortytwo.signalk.server.SignalKServer</mainClass>
								</manifest>
							</archive>
						</configuration>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
					<!-- <execution>
						<id>make-assembly-zip</id>
						<phase>package</phase>
						<configuration>
							<descriptors>
								
								<descriptor>src/main/release/assembly.xml</descriptor>
							</descriptors>
						</configuration>
						<goals>
							<goal>single</goal>
						</goals>
					</execution> -->
				</executions>
			</plugin>
			<!-- <plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>autoincrement-versions-maven-plugin</artifactId>
				<version>2.0-SNAPSHOT</version>
				<executions>
					<execution>
						<id>update-pom-versions</id>
						<goals>
							<goal>increment</goal>
							<goal>commit</goal>
						</goals>
						<phase>install</phase>
						<configuration>
							<autoIncrementVersion>true</autoIncrementVersion>
						</configuration>
					</execution>
				</executions>
			</plugin>-->
		</plugins>
	</build>
</project>